--- a/src/wasm-lib/kcl/src/docs/templates/index.hbs
+++ b/src/wasm-lib/kcl/src/docs/templates/index.hbs
@@ -7,6 +7,7 @@ layout: manual
 ## Table of Contents
 
 * [Types](kcl/types)
+* [Modules](kcl/modules)
 * [Known Issues](kcl/KNOWN-ISSUES)
 {{#each functions}}
 * [`{{name}}`](kcl/{{name}})
