Container query magic to get conditionally rounded corners
Okay I'm damn proud of this one. You technically can't, even with CSS
container queries, detect within an `@container()` if a child is 100% of
its container's width. But you can compare the values of `cqmax` and
`cqw` units.

--- a/src/index.css
+++ b/src/index.css
@@ -378,6 +378,16 @@ code,
     @apply border rounded border-chalkboard-30/50 dark:border-chalkboard-80/30;
     @apply group-hover/avatar:border-chalkboard-30 group-hover/avatar:dark:border-chalkboard-70;
   }
+
+  .toolbar {
+    :has(> &) {
+      container-type: inline-size;
+    }
+
+    --border-radius: calc(round(calc(1cqw / 1cqmax * 1)) * 4px);
+    border-bottom-right-radius: var(--border-radius);
+    border-bottom-left-radius: var(--border-radius);
+  }
 }
 
 @layer utilities {
