CSS container query wizardry: remove border-radius when toolbar is full-width, add flex-wrap (#9865)
* Container query magic to get conditionally rounded corners

Okay I'm damn proud of this one. You technically can't, even with CSS
container queries, detect within an `@container()` if a child is 100% of
its container's width. But you can compare the values of `cqmax` and
`cqw` units.

* Also remove inline border

* Update snapshots

* Fix because I completely misunderstood cqmin and cqmax

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/src/index.css
+++ b/src/index.css
@@ -378,6 +378,20 @@ code,
     @apply border rounded border-chalkboard-30/50 dark:border-chalkboard-80/30;
     @apply group-hover/avatar:border-chalkboard-30 group-hover/avatar:dark:border-chalkboard-70;
   }
+
+  .toolbar {
+    box-sizing: border-box;
+    :has(> &) {
+      container-type: inline-size;
+    }
+
+    /** relate the values of cqi units (% container's inline size)
+    and percentage (which uses child's inline-size) to get a percentage */
+    --container-percentage-width: calc(100cqi - 100%);
+    --br: min(var(--container-percentage-width), 4px);
+    border-bottom-right-radius: var(--br);
+    border-bottom-left-radius: var(--br);
+  }
 }
 
 @layer utilities {
