--- a/rust/kcl-lib/src/docs/templates/const.hbs
+++ b/rust/kcl-lib/src/docs/templates/const.hbs
@@ -35,7 +35,7 @@ layout: manual
 {{{this.content}}}
 ```
 
-![Rendered example of {{@root.name}} {{@index}}](data:image/png;base64,{{{this.image_base64}}})
+![Rendered example of {{@root.name}} {{@index}}]({{this.image_path}})
 
 {{/each}}
 {{/if}}
