--- a/rust/kcl-lib/src/docs/templates/kclType.hbs
+++ b/rust/kcl-lib/src/docs/templates/kclType.hbs
@@ -34,8 +34,8 @@ layout: manual
 ```
 {{/if}}
 
-{{#if this.image_base64}}
-![Rendered example of {{@root.name}} {{@index}}](data:image/png;base64,{{{this.image_base64}}})
+{{#if this.image_path}}
+![Rendered example of {{@root.name}} {{@index}}]({{this.image_path}})
 {{/if}}
 
 {{/each}}
